# TraderWizFetcher

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
consume/: Dockerfile  README.md  client_manager.py  config.py  main.py  pyproject.toml  redis_service.py
consume/services/: db_service.py  redis_service.py
ingest/: .env.example  Dockerfile  README.md  config.py  db.py  health.py  http_client.py  main.py  pyproject.toml  redis_client.py  worker.py
ingest/clients/: __init__.py  db.py  http_client.py  redis_client.py
ingest/utils/: __init__.py  json_logging.py
