[project]
name = "consume"
version = "0.1.0"
description = "A data consumption module for TraderWizFetcher. Sends processed data to subscribed HTTP clients."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.121.3",
    "gunicorn>=23.0.0",
    "pydantic>=2.12.4",
    "redis>=7.1.0",
    "uvicorn>=0.38.0",
    "asyncpg>=0.29.0",
]
